Minor Amend to JSON config

--- a/src/static/locales/en-gb.json
+++ b/src/static/locales/en-gb.json
@@ -1,6 +1,7 @@
 {
   "header": {
     "searchInputText": "Search for images..."
+    "searchButtonText": "Submit"
   },
   "footer": {
     "gitHubLinkText": "View project on GitHub",
